CAR/newfeatures/face_recognition_ros/face/log/build_2024-12-17_00-41-59/face/stderr.log
  File "/root/Desktop/face/install/face/lib/python3.11/site-packages/face/face.py", line 8
    def main()
              ^
SyntaxError: expected ':'

